--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 certifi==2019.6.16
 chardet==3.0.4
 dj-database-url==0.5.0
-Django==2.0.6
+Django==2.0.13
 django-ckeditor==5.6.1
+django-froala-editor==2.9.5
 django-heroku==0.3.1
 django-js-asset==1.2.2
+django-richtextfield==1.4.0
 django-tinymce==2.8.0
 gunicorn==19.9.0
 idna==2.8
@@ -14,6 +16,3 @@ pytz==2018.9
 requests==2.22.0
 urllib3==1.25.3
 whitenoise==4.1.2
-django-bootstrap4
-django-froala-editor
-django-richtextfield
